{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 257,
  "lineage": "b16d0df0-58e4-80d0-1cbb-fa24f597b355",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-0262421f354126487",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0262421f354126487",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe236d4685b490b8",
            "private_dns": "ip-192-168-12-162.ap-south-1.compute.internal",
            "private_ip": "192.168.12.162",
            "public_ip": "13.235.0.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ab54490a5c0e20a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0288fbc0c74b136b0",
            "tags": {
              "Name": "db-vm-1"
            },
            "tags_all": {
              "Name": "db-vm-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001e643f9db3b4826"
            ]
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2",
            "aws_key_pair.key-3",
            "aws_security_group.DB-SG",
            "aws_subnet.db-subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-02ace8144f05bcb47",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ace8144f05bcb47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b273b0e045f1b4aa",
            "private_dns": "ip-192-168-13-74.ap-south-1.compute.internal",
            "private_ip": "192.168.13.74",
            "public_ip": "13.232.50.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1de6ef9611dc17c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a47d7dd8d1d7ebf6",
            "tags": {
              "Name": "db-vm-2"
            },
            "tags_all": {
              "Name": "db-vm-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001e643f9db3b4826"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-3",
            "aws_security_group.DB-SG",
            "aws_subnet.db-subnets",
            "aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-09420934943bc72d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09420934943bc72d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e686ba1f48f78938",
            "private_dns": "ip-192-168-14-235.ap-south-1.compute.internal",
            "private_ip": "192.168.14.235",
            "public_ip": "3.110.182.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049fb335e842d617d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a56a277056becf39",
            "tags": {
              "Name": "db-vm-3"
            },
            "tags_all": {
              "Name": "db-vm-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001e643f9db3b4826"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-3",
            "aws_security_group.DB-SG",
            "aws_subnet.db-subnets",
            "aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-0863609ba32c87641",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0863609ba32c87641",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f11189edaae28e5",
            "private_dns": "ip-192-168-15-155.ap-south-1.compute.internal",
            "private_ip": "192.168.15.155",
            "public_ip": "3.111.33.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05409c35c56ef777c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4da07cbaa08c498",
            "tags": {
              "Name": "db-vm-4"
            },
            "tags_all": {
              "Name": "db-vm-4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001e643f9db3b4826"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-3",
            "aws_security_group.DB-SG",
            "aws_subnet.db-subnets",
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-04f7b0aee1cec7a3b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f7b0aee1cec7a3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061014eb1fc25cb62",
            "private_dns": "ip-192-168-10-117.ap-south-1.compute.internal",
            "private_ip": "192.168.10.117",
            "public_ip": "3.110.215.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b014b5451a00f4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05913a20524363561",
            "tags": {
              "Name": "web-vm-1"
            },
            "tags_all": {
              "Name": "web-vm-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05a0baca8573695fb"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-3",
            "aws_security_group.Web-SG",
            "aws_subnet.web-subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-0ee7cf303d77e983d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee7cf303d77e983d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a8419a35c07a77f",
            "private_dns": "ip-192-168-11-134.ap-south-1.compute.internal",
            "private_ip": "192.168.11.134",
            "public_ip": "13.126.126.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa2ce29eb70cc1ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9a167e84e7e6cee",
            "tags": {
              "Name": "web-vm-2"
            },
            "tags_all": {
              "Name": "web-vm-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05a0baca8573695fb"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-3",
            "aws_security_group.Web-SG",
            "aws_subnet.web-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:internet-gateway/igw-01daa556341055091",
            "id": "igw-01daa556341055091",
            "owner_id": "592161164847",
            "tags": {
              "Name": "igw-2"
            },
            "tags_all": {
              "Name": "igw-2"
            },
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:route-table/rtb-0e2744fa39d78bed7",
            "id": "rtb-0e2744fa39d78bed7",
            "owner_id": "592161164847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01daa556341055091",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-2",
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-1-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a4c1628b9103cf4",
            "route_table_id": "rtb-0e2744fa39d78bed7",
            "subnet_id": "subnet-05913a20524363561"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2",
            "aws_internet_gateway.igw-2",
            "aws_route_table.public_route_table",
            "aws_subnet.web-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-2-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089283567a38804eb",
            "route_table_id": "rtb-0e2744fa39d78bed7",
            "subnet_id": "subnet-0c9a167e84e7e6cee"
          },
          "dependencies": [
            "aws_internet_gateway.igw-2",
            "aws_route_table.public_route_table",
            "aws_subnet.web-subnets",
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:security-group/sg-001e643f9db3b4826",
            "description": "Allow traffic only from within the vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001e643f9db3b4826",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Allow all ssh traffic from within the vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Allow all traffic from within the vpc - for ping test",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "for DB instances",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DB-SG",
            "name_prefix": "",
            "owner_id": "592161164847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-SG"
            },
            "tags_all": {
              "Name": "DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Web-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:security-group/sg-05a0baca8573695fb",
            "description": "Allow ssh, http \u0026 https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a0baca8573695fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "592161164847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0288fbc0c74b136b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.12.0/24",
            "id": "subnet-0288fbc0c74b136b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "db-1"
            },
            "tags_all": {
              "Name": "db-1"
            },
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0a47d7dd8d1d7ebf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.13.0/24",
            "id": "subnet-0a47d7dd8d1d7ebf6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "db-2"
            },
            "tags_all": {
              "Name": "db-2"
            },
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0a56a277056becf39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.14.0/24",
            "id": "subnet-0a56a277056becf39",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "db-1"
            },
            "tags_all": {
              "Name": "db-1"
            },
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0d4da07cbaa08c498",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.15.0/24",
            "id": "subnet-0d4da07cbaa08c498",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "db-2"
            },
            "tags_all": {
              "Name": "db-2"
            },
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-05913a20524363561",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-05913a20524363561",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "web-1"
            },
            "tags_all": {
              "Name": "web-1"
            },
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0c9a167e84e7e6cee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.11.0/24",
            "id": "subnet-0c9a167e84e7e6cee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "tags": {
              "Name": "web-2"
            },
            "tags_all": {
              "Name": "web-2"
            },
            "vpc_id": "vpc-0e921c13818cc98e7"
          },
          "dependencies": [
            "aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary-vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:vpc/vpc-0e921c13818cc98e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02a40b9336e0666f6",
            "default_route_table_id": "rtb-06984a3d808eb96a8",
            "default_security_group_id": "sg-0102030f03b32f207",
            "dhcp_options_id": "dopt-08e25d63",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e921c13818cc98e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06984a3d808eb96a8",
            "owner_id": "592161164847",
            "tags": {
              "Name": "spc-vpc"
            },
            "tags_all": {
              "Name": "spc-vpc"
            }
          }
        }
      ]
    }
  ]
}